# sex-cli

./: .env.example  Cargo.toml  README.md
.github/workflows/: test.yml
.trunk/: trunk.yaml
doc/: architecture.md  development.md
scripts/: install_completions.sh
src/: commands.rs  config.rs  dashboard.rs  issue_viewer.rs  main.rs  sentry.rs  tui.rs
