[package]
name = "sex-cli"
version = "0.1.0"
edition = "2021"
description = "Sentry EXplorer CLI"
authors = ["amkisko"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1.0"
sodiumoxide = "0.2"
base64 = "0.21"
keyring = "2.3"
rand = "0.8"
rpassword = "7.3"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"
mockito = "1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
